2002-07-15  Glynn Foster  <glynn.foster@sun.com>

	* src/callbacks.c: Remove dumb stuff which breaks the build.

2002-07-11  Glynn Foster  <glynn.foster@sun.com>

        * src/asciiselect.c: (ascii_select_init): Add mnemonics
        * src/interface.c: (edit_menu_set_sensitivity): De-sensitize the
        Cut and Copy items when there is nothing in the text entry.
        * src/menus.c: Change mnemonic to avoid a clash.
        Fixes #87907, 87908.

2002-07-05  Glynn Foster  <glynn.foster@sun.com>

        * gnome-character-map.desktop.in: s/DocPath/X-GNOME-DocPath.
        Conforms to spec now.

2002-07-05  Glynn Foster  <glynn.foster@sun.com>

        * src/callbacks.c, src/interface.h: Remove some uneccessary
        headers and rearrange.

2002-07-04 John Fleck <jfleck@inkstain.net>

        * help/C/Makefile.am
        fix typo that was preventing screenshots from being
        installed

2002-07-01  Glynn Foster <glynn.foster@sun.com>

        * src/callbacks.c, src/callbacks.h, src/interface.c: Fix silly
        caused by me and restructure some code.

2002-07-01  Mats-Ole Persson <polli@hadjaha.org>

	* src/callbacks.c, src/callbacks.h, src/interface.c: Enabled
	'Clear' and 'Select All' when inputing characters from the
	keyboard. Fixes #86036.

2002-06-12  Glynn Foster  <glynn.foster@sun.com>

	* src/callbacks.c: Set the browse dialog as transient for
	the parent window.

2002-06-10  Malcolm Tredinnick <malcolm@commsecure.com.au>

        * src/menus.c: use _UI_SUBTREE instead of _UI_SUBTREE_STOCK 
	since that makes translations actually work. _UI_SUBTREE_STOCK 
	means that the string comes from libgnomeui which in these cases
	it doesn't.
	
2002-06-01  Ross Burton  <ross@hactar>

	* src/interface.c (main_app_create_ui): Pass a reference to the
	top-level window as the user_data to the menu callbacks.

	* src/callbacks.c (cb_about_click): Set the about window as
	transient for the parent window. Fixes #83799.
